[package]
name = "popcorn"
version = "0.1.0"
edition = "2021"
authors = ["The Popcorn Team"]
license = "MIT License"

[lib]
crate-type = ["lib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
x86_64 = "0.14.1"
pic8259 = "0.10.1"
uart_16550 = "0.2.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300
test-success-exit-code = 33         # (0x10 << 1) | 1
